# abifsm

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
scripts/: collapse_evm_list.py
src/abifsm/: __init__.py  abifsm.py  chain_ids.py  cli.py  evm_chainlist_raw.json
tests/: __init__.py  test_abifsm.py
tests/abis/: 0x1f9840a85d5aF5bf1D1762F925BDADdC4201F984.json
